--- a/js-sample/assets/styles.css
+++ b/js-sample/assets/styles.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  background: #eee;
+  background: #F8F8F8;
   font-family: "Helvetica Neu", Arial;
   color: #666;
   padding: 0;
@@ -30,16 +30,14 @@ h1 {
   margin-top: 0;
   padding-top: 0;
   border-bottom: 1px solid rgba(0,0,0,0.2);
-  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
   display: block;
   font-weight: 200;
   padding: 0.6rem;
-  background: -moz-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(237,237,237,1)), color-stop(53%, rgba(246,246,246,1)), color-stop(100%, rgba(255,255,255,1)));
-  background: -webkit-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -o-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -ms-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: linear-gradient(to bottom, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
+  background-color:#FFF;
+}
+
+h1 .logo_standard{
+  margin:5px 20px;
 }
 
 h1 small {
@@ -55,14 +53,8 @@ div.prettyBox {
   max-width: 90%;
   min-width: 60%;
   width: 500px;
-  background: -moz-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(237,237,237,1)), color-stop(53%, rgba(246,246,246,1)), color-stop(100%, rgba(255,255,255,1)));
-  background: -webkit-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -o-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: -ms-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
-  background: linear-gradient(to bottom, rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%);
+  background:#FFF;
   border: 1px solid rgba(0,0,0,0.2);
-  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
   text-align: center;
 }
 
